apps/base/infra-crowdsec/deploy/lapi/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lapi
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: crowdsec
      app.kubernetes.io/component: lapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crowdsec
        app.kubernetes.io/component: lapi
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534 # nobody
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: lapi
        image: "registry.lan/crowdsec:v1.8.1-debian"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: lapi
        - containerPort: 6060
          name: metrics
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          httpGet:
            port: lapi
            path: /health
            scheme: HTTPS
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          httpGet:
            port: lapi
            path: /health
            scheme: HTTPS
          timeoutSeconds: 1
        startupProbe:
          failureThreshold: 30
          periodSeconds: 10
          successThreshold: 1
          httpGet:
            port: lapi
            path: /health
            scheme: HTTPS
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 150m
            memory: 128Mi
          limits:
            cpu: 400m
            memory: 128Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: crowdsec-ca-certs
          mountPath: /etc/ssl/crowdsec
        - name: lapi-certs
          mountPath: /etc/ssl/crowdsec/server
        - name: crowdsec-config
          mountPath: /etc/crowdsec
          subPath: crowdsec
        - name: crowdsec-db
          mountPath: /var/lib/crowdsec/data
          subPath: data
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: crowdsec-db
        persistentVolumeClaim:
          claimName: crowdsec-db
      - name: crowdsec-config
        persistentVolumeClaim:
          claimName: crowdsec-config
      - name: crowdsec-ca-certs
        secret:
          secretName: crowdsec-ca-certs
      - name: lapi-certs
        secret:
          secretName: lapi-certs
      - name: lapi-config
        configMap:
          name: lapi-config
      - name: lapi-config-secret
        secret:
          secretName: lapi-config
      - name: tmp-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
