apps/base/infra-crowdsec/deploy/lapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lapi
spec:
  ports:
  - name: lapi
    port: 8080
    targetPort: lapi
  selector:
    app.kubernetes.io/name: crowdsec
    app.kubernetes.io/component: lapi
