apps/base/infra-crowdsec/deploy/lapi/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-crowdsec-lapi
spec:
  policyTypes: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: crowdsec
      app.kubernetes.io/component: lapi

  ingress:
    - ports:
        - port: lapi
      from:
        # Allow from agents
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: crowdsec
              app.kubernetes.io/component: agent

    # Allow from everywhere (required for external calls like bouncers installed on hosts)
    - ports:
        - port: lapi

    - ports:
        - port: metrics
      from:
        # Allow from prometheus
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/component: prometheus
              app.kubernetes.io/instance: k8s
              app.kubernetes.io/name: prometheus
